<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.android.authenticator.ui.MainActivity">
    <item
        android:id="@+id/mi_search"
        android:title="@string/search"
        app:showAsAction="always"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>
    <item
        android:id="@+id/action_lock"
        android:icon="@drawable/ic_outline_lock_24"
        app:showAsAction="ifRoom"
        android:title="@string/lock"/>
    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_outline_sort_24"
        app:showAsAction="always"
        android:title="@string/sort">
        <menu>
            <group
                android:id="@+id/action_sort_category"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_sort_custom"
                    android:title="@string/sort_custom"
                    android:checked="true" />
                <item
                    android:id="@+id/menu_sort_alphabetically_name"
                    android:title="@string/sort_alphabetically_name"/>
                <item
                    android:id="@+id/menu_sort_alphabetically_name_reverse"
                    android:title="@string/sort_alphabetically_name_reverse"/>
                <item
                    android:id="@+id/menu_sort_alphabetically"
                    android:title="@string/sort_alphabetically"/>
                <item
                    android:id="@+id/menu_sort_alphabetically_reverse"
                    android:title="@string/sort_alphabetically_reverse"/>
                <item
                    android:id="@+id/menu_sort_usage_count"
                    android:title="@string/sort_usage_count"/>
                <item
                    android:id="@+id/menu_sort_last_used"
                    android:title="@string/sort_last_used"/>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="110"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>
