...
                        <com.google.android.material.textfield.TextInputLayout
                            android:hint="@string/name"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">
                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/text_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textCapSentences"/>
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>
                    <LinearLayout
...
                        <com.google.android.material.textfield.TextInputLayout
                            android:hint="@string/issuer"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1">
                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/text_issuer"
                                android:maxLines="1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textCapSentences"/>
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>
...
                            android:id="@+id/text_group_layout"
                            android:hint="@string/group"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">
                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/text_group"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:cursorVisible="false"
                                android:inputType="none"/>
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>
...
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:passwordToggleTint="?attr/colorOnSurface"
                            app:passwordToggleEnabled="true">

                            <com.android.authenticator.ui.components.NoAutofillEditText
                                android:id="@+id/text_secret"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/secret"
                                android:inputType="textPassword|textMultiLine"/>
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>
...
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:passwordToggleTint="?attr/colorOnSurface"
                            app:passwordToggleEnabled="true">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/text_pin"
                                android:maxLength="16"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="numberPassword"/>
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>
                </LinearLayout>

                <RelativeLayout
                    android:foreground="?android:attr/selectableItemBackground"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/accordian_header"
                    android:focusable="true"
                    android:clickable="true">

                    <ImageView
                        android:id="@+id/down_btn"
                        android:layout_width="wrap_content"
...
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="5dp"
                                android:layout_weight="2"
                                android:hint="@string/type"
                                style="?attr/dropdownStyle">
                                <AutoCompleteTextView
                                    android:id="@+id/dropdown_type"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:inputType="none"/>
                            </com.google.android.material.textfield.TextInputLayout>
                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/dropdown_algo_layout"
...
