<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.android.authenticator.ui.EditEntryActivity">
    <item
        android:id="@+id/action_save"
        app:showAsAction="ifRoom"
        android:title="@string/save"/>
    <item
        android:id="@+id/action_edit_icon"
        android:title="@string/action_edit_icon"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_reset_usage_count"
        android:title="@string/action_reset_usage_count"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_default_icon"
        android:title="@string/action_default_icon"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_delete"
        android:title="@string/action_delete"
        app:showAsAction="never"/>
</menu>
