...
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:liftOnScroll="true"
        app:liftOnScrollTargetViewId="@+id/rvKeyProfiles">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

...
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingStart="12dp"
                android:paddingEnd="12dp">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/groupChipGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:selectionRequired="true"/>
            </LinearLayout>
        </HorizontalScrollView>
    </com.google.android.material.appbar.AppBarLayout>
...
